--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </div>
                 </div>
 
-                
+
 
             </div>
         </section>
@@ -190,7 +190,7 @@
 
                 <div class="box">
                     <div class="pTop">
-                        <p>washing machine</p>
+                        <p>Up to 20% off | washing machine</p>
                     </div>
                     <div class="boxImg"><img src="img/electronics/washing-machine.jpg" alt=""></div>
                     <div class="pBottom">
@@ -210,11 +210,101 @@
 
                 <div class="box">
                     <div class="pTop">
-                        <p>Android pad</p>
+                        <p>Up to 50% off |Android pad</p>
                     </div>
                     <div class="boxImg"><img src="img/electronics/tablet.jpg" alt=""></div>
                     <div class="pBottom">
                         <p>Shop now</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="todaysDeals">
+            <div class="todaysDealsContainer">
+                <div class="todaysDealsHeader">
+                    <p>Today's Deals</p>
+                    <p>See all deals</p>
+                </div>
+                <div class="todaysDealsList">
+                    <div class="leftArrow">
+                        <i class="ri-arrow-left-s-line"></i>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/todysDeals/socket.jpg" alt="">
+                        </div>
+                        <div class="todaysDealsInfo">
+                            <div class="todaysDealsButtomInfo">
+                                <p>Up to 95% off</p>
+                                <p>Deal of the Day</p>
+                            </div>
+                            <p>Best offers on PC and Electronic </p>
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/todysDeals/Bulb.jpg" alt="">
+                        </div>
+                        <div class="todaysDealsInfo">
+                            <div class="todaysDealsButtomInfo">
+                                <p>Up to 70% off</p>
+                                <p>Deal of the Day</p>
+                            </div>
+                            <p>Lowest prices on Smart Bulbs</p>
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/todysDeals/Mobile.jpg" alt="">
+                        </div>
+                        <div class="todaysDealsInfo">
+                            <div class="todaysDealsButtomInfo">
+                                <p>Up to 27% off</p>
+                                <p>Deal of the Day</p>
+                            </div>
+                            <p>8GB RAM 5G Phone at Rs.12499</p>
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/todysDeals/mobile2.jpg" alt="">
+                        </div>
+                        <div class="todaysDealsInfo">
+                            <div class="todaysDealsButtomInfo">
+                                <p>14% off</p>
+                                <p>Deal of the Day</p>
+                            </div>
+                            <p>Best offers on OPPO F23 5G</p>
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/todysDeals/shoes-rack.jpg" alt="">
+                        </div>
+                        <div class="todaysDealsInfo">
+                            <div class="todaysDealsButtomInfo">
+                                <p>Up to 44% off</p>
+                                <p>Deal of the Day</p>
+                            </div>
+                            <p>Grate savings on Storage and ...</p>
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/todysDeals/shoes.jpg" alt="">
+                        </div>
+                        <div class="todaysDealsInfo">
+                            <div class="todaysDealsButtomInfo">
+                                <p>Up to 45% off</p>
+                                <p>Deal of the Day</p>
+                            </div>
+                            <p>Bata, Hush Puppies & more </p>
+                        </div>
+                    </div>
+                   
+                    <div class="rightArrow">
+                        <i class="ri-arrow-right-s-line"></i>
                     </div>
                 </div>
             </div>
@@ -288,50 +378,72 @@
         <div class="footer-other-services">
             <div class="other-services-content">
                 <div class="content-box">
-                    <div><p class="headerP">AbeBooks</p>
+                    <div>
+                        <p class="headerP">AbeBooks</p>
                         <p>Books, art</p>
-                        <p>& collectibles</p></div>
+                        <p>& collectibles</p>
+                    </div>
                     <br>
-                    <div><p class="headerP">Shopbop</p>
+                    <div>
+                        <p class="headerP">Shopbop</p>
                         <p>Designer</p>
-                        <p>Fashion Brands</p></div>
+                        <p>Fashion Brands</p>
+                    </div>
                 </div>
                 <div class="content-box">
-                   <div> <p class="headerP"> Amazon Web Services</p>
-                    <p>Scalable Cloud</p>
-                    <p>Computing Services</p></div>
+                    <div>
+                        <p class="headerP"> Amazon Web Services</p>
+                        <p>Scalable Cloud</p>
+                        <p>Computing Services</p>
+                    </div>
                     <br>
-                   <div> <p class="headerP">Amazon Business</p>
-                    <p>Everything For</p>
-                    <p>Your Business</p></div>
+                    <div>
+                        <p class="headerP">Amazon Business</p>
+                        <p>Everything For</p>
+                        <p>Your Business</p>
+                    </div>
                 </div>
                 <div class="content-box">
-                    <div><p class="headerP"> Audible</p>
+                    <div>
+                        <p class="headerP"> Audible</p>
                         <p>Download</p>
-                        <p>Audio Books</p></div>
+                        <p>Audio Books</p>
+                    </div>
                     <br>
-                    <div><p class="headerP">Prime Now</p>
+                    <div>
+                        <p class="headerP">Prime Now</p>
                         <p>2-Hour Delivery</p>
-                        <p>on Everyday Items</p></div>
+                        <p>on Everyday Items</p>
+                    </div>
                 </div>
                 <div class="content-box">
-                    <div><p class="headerP"> DPReview</p>
+                    <div>
+                        <p class="headerP"> DPReview</p>
                         <p> Digital</p>
-                        <p>Photography</p></div>
+                        <p>Photography</p>
+                    </div>
                     <br>
-                  <div>  <p class="headerP">Amazon Prime Music</p>
-                    <p>100 million songs, ad-free</p>
-                    <p>Over 15 million podcast episodes</p></div>
+                    <div>
+                        <p class="headerP">Amazon Prime Music</p>
+                        <p>100 million songs, ad-free</p>
+                        <p>Over 15 million podcast episodes</p>
+                    </div>
                 </div>
                 <div class="content-box">
-                    <div><p class="headerP">IMDb</p>
+                    <div>
+                        <p class="headerP">IMDb</p>
                         <p>Movies, TV</p>
-                        <p>& Celebrities</p></div>
+                        <p>& Celebrities</p>
+                    </div>
                 </div>
             </div>
 
             <div class="footerEnd">
-                <div><p>Conditions of Use & Sale</p>    <p>Privacy Notice</p>    <p>Interest-Based Ads</p></div>
+                <div>
+                    <p>Conditions of Use & Sale</p>
+                    <p>Privacy Notice</p>
+                    <p>Interest-Based Ads</p>
+                </div>
                 <p>© 1996-2023, Amazon.com, Inc. or its affiliates</p>
             </div>
 
