--- a/index.html
+++ b/index.html
@@ -309,6 +309,202 @@
                 </div>
             </div>
         </section>
+
+        <section class="todaysDeals">
+            <div class="todaysDealsContainer">
+                <div class="todaysDealsHeader">
+                    <p>Festive wear from small businesses</p>
+                    <p>See all deals</p>
+                </div>
+                <div class="todaysDealsList2">
+                    <div class="leftArrow">
+                        <i class="ri-arrow-left-s-line"></i>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/clothes/dress1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/clothes/dress2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/clothes/dress3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/clothes/dress4.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/clothes/dress5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/clothes/dress6.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="rightArrow">
+                        <i class="ri-arrow-right-s-line"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="todaysDeals">
+            <div class="todaysDealsContainer">
+                <div class="todaysDealsHeader">
+                    <p>Up to 60% off | Car & bike accessories & more </p>
+                    <p>See all deals</p>
+                </div>
+                <div class="todaysDealsList2">
+                    <div class="leftArrow">
+                        <i class="ri-arrow-left-s-line"></i>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Car&Bike/1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Car&Bike/2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Car&Bike/3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Car&Bike/4.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Car&Bike/5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Car&Bike/6.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="rightArrow">
+                        <i class="ri-arrow-right-s-line"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="main">
+            <div class="container2">
+                <div class="box">
+                    <div class="pTop">
+                        <p>Starting 99 | Start your fitness journey</p>
+                    </div>
+                    <div class="boxImg"><img src="img/gym/gym.jpg" alt=""></div>
+                    <div class="pBottom">
+                        <p>Shop now</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="pTop">
+                        <p>Bestselling Smartwatch</p>
+                    </div>
+                    <div class="boxImg"><img src="img/electronics/smart-watch3.jpg" alt=""></div>
+                    <div class="pBottom">
+                        <p>Shop now</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="pTop">
+                        <p>Up to 40% off | Daily essentials</p>
+                    </div>
+                    <div class="boxImgs">
+                        <img src="img/food/1.jpg" alt="">
+                        <img src="img/food/2.jpg" alt="">
+                        <img src="img/food/3.jpg" alt="">
+                        <img src="img/food/4.jpg" alt="">
+                    </div>
+                    <div class="pBottom">
+                        <p>Shop now</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="pTop">
+                        <p>Up to 40% off | Daily essentials</p>
+                    </div>
+                    <div class="boxImgs">
+                        <img src="img/food/5.jpg" alt="">
+                        <img src="img/food/6.jpg" alt="">
+                        <img src="img/food/7.jpg" alt="">
+                        <img src="img/food/4.jpg" alt="">
+                    </div>
+                    <div class="pBottom">
+                        <p>Shop now</p>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+
+        <section class="todaysDeals">
+            <div class="todaysDealsContainer">
+                <div class="todaysDealsHeader">
+                    <p>Grocery & Gourmet </p>
+                    <p>See all deals</p>
+                </div>
+                <div class="todaysDealsList2">
+                    <div class="leftArrow">
+                        <i class="ri-arrow-left-s-line"></i>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Grocery&Gourmet/1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Grocery&Gourmet/2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Grocery&Gourmet/3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Grocery&Gourmet/4.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Grocery&Gourmet/5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="todayDealsItemContainer">
+                        <div class="imgContainer">
+                            <img src="./img/Grocery&Gourmet/6.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="rightArrow">
+                        <i class="ri-arrow-right-s-line"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
